deployment/httpd/deploy.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
 name: httpd
 labels:
  app: httpd
spec:
 replicas: 5
 selector:
  name: httpd
 template:
  metadata:
   labels:
    name: httpd
  spec:
   containers:
    - name: httpd
      image: centos/httpd-24-centos7
      ports:
       - containerPort: 8080
         protocol: TCP
