deployment/httpd/service.yml
apiVersion: v1
kind: Service
metadata:
 labels:
  name: httpd
 name: httpd
spec:
 ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
 selector:
  deploymentconfig: httpd
